Dyninst / timemory-run updates
- added dyninst submodule
- updated hatchet submodule
- updated caliper submodule
- fixed minor issue with configure_mpip
- support for TIMEMORY_USE_MPI_HEADERS

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "external/hatchet"]
 	path = external/hatchet
 	url = https://github.com/jrmadsen/hatchet.git
+[submodule "external/dyninst"]
+	path = external/dyninst
+	url = https://github.com/jrmadsen/dyninst.git
