--- a/source/tests/scripts/attach-process.sh.in
+++ b/source/tests/scripts/attach-process.sh.in
@@ -1,4 +1,4 @@
-#!/bin/bash -e
+#!/bin/bash -ex
 #
 # NOTE: The attach mode may not work if system permissions are disabled.
 #
@@ -21,7 +21,7 @@ rm -rf ${TIMEMORY_OUTPUT_PATH}
 # append directories to path
 export PATH=@CMAKE_CURRENT_BINARY_DIR@:@PROJECT_BINARY_DIR@:${PATH}
 # add path to libtimemory to LD_LIBRARY_PATH
-export LD_LIBRARY_PATH=@PROJECT_BINARY_DIR@:${LD_LIBRARY_PATH}
+export LD_LIBRARY_PATH=@PROJECT_BINARY_DIR@:@PROJECT_BINARY_DIR@/external/dyninst/dyninstAPI_RT:${LD_LIBRARY_PATH}
 
 emit-separator "Executing command in background"
 # launch and grab PID
@@ -48,3 +48,6 @@ else
         exit 1
     fi
 fi
+
+echo "Instrumentation Test... Done"
+exit 0
