python + cmake updates
- ignore compile_commands.json
- python setup.py default to C++17
- ring buffer storage + allocator
- updates to timemory-config.cmake.in
- cmake-format

--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -333,17 +333,19 @@ set(_timemory_MISSING_COMPONENTS)
 set(timemory_FOUND_COMPONENTS ${timemory_FIND_COMPONENTS})
 
 # option to skip building the interface library
-set(TIMEMORY_BUILD_INTERFACE_LIBRARY ON)
-if(TIMEMORY_SKIP_INTERFACE_LIBRARY)
-    set(TIMEMORY_BUILD_INTERFACE_LIBRARY OFF)
-elseif("${timemory_FIND_COMPONENTS}" STREQUAL "")
-    set(TIMEMORY_BUILD_INTERFACE_LIBRARY OFF)
+if(NOT DEFINED TIMEMORY_BUILD_INTERFACE_LIBRARY)
+    set(TIMEMORY_BUILD_INTERFACE_LIBRARY ON)
+    if(TIMEMORY_SKIP_INTERFACE_LIBRARY)
+        set(TIMEMORY_BUILD_INTERFACE_LIBRARY OFF)
+    elseif("${timemory_FIND_COMPONENTS}" STREQUAL "")
+        set(TIMEMORY_BUILD_INTERFACE_LIBRARY OFF)
+    endif()
 endif()
 
 # if build interface library is enabled
 if(TIMEMORY_BUILD_INTERFACE_LIBRARY)
 
-    set(_INTERFACE_LIB timemory)
+    set(_INTERFACE_LIB timemory::timemory)
 
     if(timemory_FIND_COMPONENTS_INTERFACE)
         set(_INTERFACE_LIB ${timemory_FIND_COMPONENTS_INTERFACE})
@@ -402,15 +404,40 @@ set(timemory_ENABLED_LINK_LANGUAGES)
 set(timemory_ENABLED_LINK_LIBRARIES)
 set(timemory_SHARED_LIBRARIES)
 set(timemory_STATIC_LIBRARIES)
-foreach(_LANG c cxx)
+foreach(_LANG c cxx fortran)
     foreach(_LINK shared static)
-        if(TARGET timemory-${_LANG}-${_LINK})
+        if(TARGET timemory::timemory-${_LANG}-${_LINK})
             string(TOUPPER "${_LANG}" _ENABLED_LANG)
             string(TOUPPER "${_LINK}" _ENABLED_LINK)
             list(APPEND timemory_${_ENABLED_LINK}_LIBRARIES timemory-${_LANG}-${_LINK})
             list(APPEND timemory_ENABLED_LINK_LANGUAGES ${_ENABLED_LANG})
             list(APPEND timemory_ENABLED_LINK_LIBRARIES ${_ENABLED_LINK})
-            unset(_ENABLED_LANG)
+        endif()
+    endforeach()
+endforeach()
+
+set(_PREFER_SHARED ON)
+if((DEFINED BUILD_SHARED_LIBS AND NOT BUILD_SHARED_LIBS)
+   OR (DEFINED BUILD_STATIC_LIBS AND BUILD_STATIC_LIBS)
+   OR ("static" IN_LIST timemory_FIND_COMPONENTS AND NOT "shared" IN_LIST
+                                                     timemory_FIND_COMPONENTS))
+    set(_PREFER_SHARED OFF)
+endif()
+
+if(NOT timemory_PREFERRED_LIBRARY_LINK)
+    if(_PREFER_SHARED)
+        set(timemory_PREFERRED_LIBRARY_LINK shared static)
+    else()
+        set(timemory_PREFERRED_LIBRARY_LINK shared static)
+    endif()
+endif()
+
+foreach(_LANG ${timemory_ENABLED_LINK_LANGUAGES})
+    foreach(_LINK ${timemory_PREFERRED_LIBRARY_LINK})
+        if(TARGET timemory::timemory-${_LANG}-${_LINK} AND NOT TARGET
+                                                           timemory::timemory-${_LANG})
+            add_library(timemory::timemory-${_LANG} ALIAS
+                        timemory::timemory-${_LANG}-${_LINK})
         endif()
     endforeach()
 endforeach()
@@ -420,9 +447,14 @@ if(NOT TARGET timemory::timemory)
 endif()
 
 if(TIMEMORY_BUILD_INTERFACE_LIBRARY)
-    target_link_libraries(timemory::timemory INTERFACE ${_INTERFACE_LIB})
+    if(NOT "${_INTERFACE_LIB}" STREQUAL "timemory::timemory")
+        target_link_libraries(timemory::timemory INTERFACE ${_INTERFACE_LIB})
+    endif()
 else()
     target_link_libraries(timemory::timemory INTERFACE ${timemory_LIBRARIES})
 endif()
 
 unset(TIMEMORY_INSTALL_TREE)
+unset(_PREFER_SHARED)
+unset(_ENABLED_LANG)
+unset(_ENABLED_LINK)
