--- a/source/timemory/hash/CMakeLists.txt
+++ b/source/timemory/hash/CMakeLists.txt
@@ -10,3 +10,6 @@ build_intermediate_library(
     HEADERS ${header_files}
     SOURCES ${source_files}
     PROPERTY_DEPENDS GLOBAL)
+
+list(REMOVE_ITEM source_files ${CMAKE_CURRENT_SOURCE_DIR}/hash.cpp)
+timemory_install_header_files(${source_files})
