--- a/timemory/CMakeLists.txt
+++ b/timemory/CMakeLists.txt
@@ -162,10 +162,36 @@ endforeach()
 #
 if(SKBUILD)
     return()
+else()
+    foreach(_FILE setup.py setup.cfg VERSION requirements.txt .requirements/build.txt .requirements/runtime.txt .requirements/mpi_runtime.txt)
+        configure_file(${PROJECT_SOURCE_DIR}/${_FILE} ${PROJECT_BINARY_DIR}/${_FILE} COPYONLY)
+    endforeach()
+    if(PYTHON_EXECUTABLE)
+        execute_process(
+            COMMAND ${PYTHON_EXECUTABLE} setup.py dist_info --dist-info
+            OUTPUT_VARIABLE _OUT
+            RESULT_VARIABLE _RET
+            ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE)
+        set(_DIST_DIR ${PROJECT_BINARY_DIR}/timemory-${TIMEMORY_VERSION}.dist-info)
+        if(NOT EXISTS ${_DIST_DIR})
+            set(_DIST_DIR ${PROJECT_BINARY_DIR}/timemory.dist-info)
+        endif()
+        if(EXISTS ${_DIST_DIR} AND IS_DIRECTORY ${_DIST_DIR})
+            configure_file(${PROJECT_SOURCE_DIR}/LICENSE ${PROJECT_BINARY_DIR}/${_DIST_DIR}/LICENSE.txt COPYONLY)
+            install(
+                DIRECTORY ${_DIST_DIR}
+                DESTINATION ${CMAKE_INSTALL_PYTHONDIR}
+                OPTIONAL)
+        endif()
+    endif()
 endif()
 
 function(TIMEMORY_PYTHON_CONSOLE_SCRIPT SCRIPT_NAME SCRIPT_SUBMODULE SCRIPT_FUNCTION)
     set(CONSOLE_EXTRA "${ARGN}")
+
+    if(NOT SKBUILD)
+        # set(TIMEMORY_REQUIRES_PREFIX "# ")
+    endif()
 
     configure_file(${PROJECT_SOURCE_DIR}/cmake/Templates/console-script.py.in
                    ${PROJECT_BINARY_DIR}/bin/${SCRIPT_NAME} @ONLY)
@@ -177,14 +203,15 @@ function(TIMEMORY_PYTHON_CONSOLE_SCRIPT SCRIPT_NAME SCRIPT_SUBMODULE SCRIPT_FUNC
             OPTIONAL)
     endif()
 
-    add_test(
-        NAME ${SCRIPT_NAME}-console-script-test
-        COMMAND ${PROJECT_BINARY_DIR}/bin/${SCRIPT_NAME} --help
-        WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
-    set_tests_properties(
-        ${SCRIPT_NAME}-console-script-test
-        PROPERTIES ENVIRONMENT "PYTHONPATH=${PROJECT_BINARY_DIR}:$ENV{PYTHONPATH}")
-
+    if(TIMEMORY_BUILD_TESTING OR TIMEMORY_BUILD_PYTHON)
+        add_test(
+            NAME ${SCRIPT_NAME}-console-script-test
+            COMMAND ${PROJECT_BINARY_DIR}/bin/${SCRIPT_NAME} --help
+            WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
+        set_tests_properties(
+            ${SCRIPT_NAME}-console-script-test
+            PROPERTIES ENVIRONMENT "PYTHONPATH=${PROJECT_BINARY_DIR}:$ENV{PYTHONPATH}")
+    endif()
 endfunction()
 
 if(NOT PYTHON_EXECUTABLE)
