Working dir for dist_info cmd + cmake-format

--- a/source/timemory/config/CMakeLists.txt
+++ b/source/timemory/config/CMakeLists.txt
@@ -2,8 +2,7 @@ file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 build_intermediate_library(
-    USE_INTERFACE
-    INSTALL_SOURCE
+    USE_INTERFACE INSTALL_SOURCE
     NAME config
     TARGET common
     CATEGORY GLOBAL
