--- a/timemory/CMakeLists.txt
+++ b/timemory/CMakeLists.txt
@@ -171,7 +171,8 @@ elseif(TIMEMORY_USE_PYTHON AND CMAKE_INSTALL_PYTHONDIR)
             COMMAND ${PYTHON_EXECUTABLE} setup.py dist_info --dist-info
             OUTPUT_VARIABLE _OUT
             RESULT_VARIABLE _RET
-            ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE)
+            ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE
+            WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
         set(_DIST_DIR ${PROJECT_BINARY_DIR}/timemory-${TIMEMORY_VERSION}.dist-info)
         if(NOT EXISTS ${_DIST_DIR})
             set(_DIST_DIR ${PROJECT_BINARY_DIR}/timemory.dist-info)
