--- a/source/timemory/components/likwid/CMakeLists.txt
+++ b/source/timemory/components/likwid/CMakeLists.txt
@@ -1,6 +1,6 @@
 if(TIMEMORY_USE_LIKWID)
     set(NAME likwid)
-    set(DEPS timemory-likwid)
+    set(DEPS timemory::timemory-likwid)
 
     file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
     file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
