--- a/source/timemory/components/tau_marker/CMakeLists.txt
+++ b/source/timemory/components/tau_marker/CMakeLists.txt
@@ -1,6 +1,6 @@
 if(TIMEMORY_USE_TAU)
     set(NAME tau_marker)
-    set(DEPS timemory-tau)
+    set(DEPS timemory::timemory-tau)
 
     file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
     file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
