--- a/source/timemory/components/gotcha/CMakeLists.txt
+++ b/source/timemory/components/gotcha/CMakeLists.txt
@@ -1,6 +1,6 @@
 if(TIMEMORY_USE_GOTCHA)
     set(NAME gotcha)
-    set(DEPS timemory-gotcha)
+    set(DEPS timemory::timemory-gotcha)
 
     file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
     file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
