--- a/source/timemory/components/perfetto/CMakeLists.txt
+++ b/source/timemory/components/perfetto/CMakeLists.txt
@@ -1,6 +1,6 @@
-if(TIMEMORY_USE_CALIPER)
-    set(NAME caliper)
-    set(DEPS timemory::timemory-caliper)
+if(TIMEMORY_USE_PERFETTO)
+    set(NAME perfetto)
+    set(DEPS timemory::timemory-perfetto)
 
     file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
     file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
@@ -15,4 +15,7 @@ if(TIMEMORY_USE_CALIPER)
         SOURCES ${source_files}
         DEPENDS ${DEPS}
         PROPERTY_DEPENDS GLOBAL)
+
+    list(REMOVE_ITEM source_files ${CMAKE_CURRENT_SOURCE_DIR}/extern.cpp)
+    timemory_install_header_files(${source_files})
 endif()
