--- a/source/timemory/components/timestamp/CMakeLists.txt
+++ b/source/timemory/components/timestamp/CMakeLists.txt
@@ -1,9 +1,10 @@
-set(NAME data_tracker)
+set(NAME timestamp)
 
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
 build_intermediate_library(
+    USE_INTERFACE
     NAME ${NAME}
     TARGET ${NAME}-component
     CATEGORY COMPONENT
