--- a/source/timemory/components/CMakeLists.txt
+++ b/source/timemory/components/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(data_tracker)
 add_subdirectory(gotcha)
 add_subdirectory(gperftools)
 add_subdirectory(likwid)
+add_subdirectory(hip)
 add_subdirectory(io)
 add_subdirectory(network)
 add_subdirectory(ompt)
@@ -19,6 +20,9 @@ add_subdirectory(tau_marker)
 add_subdirectory(timing)
 add_subdirectory(trip_count)
 add_subdirectory(vtune)
+add_subdirectory(printer)
+add_subdirectory(timestamp)
+add_subdirectory(perfetto)
 
 # should always be last component
 add_subdirectory(user_bundle)
