--- a/source/timemory/components/printer/CMakeLists.txt
+++ b/source/timemory/components/printer/CMakeLists.txt
@@ -1,22 +1,17 @@
-set(NAME user_bundle)
+set(NAME printer)
 
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
-
-if(TIMEMORY_USE_CUDA AND CMAKE_CUDA_COMPILER)
-    set_source_files_properties(${source_files} PROPERTIES # LANGUAGE CUDA
-                                                           LINKER_LANGUAGE CUDA)
-endif()
 
 build_intermediate_library(
     USE_INTERFACE
     NAME ${NAME}
     TARGET ${NAME}-component
-    CATEGORY USER_BUNDLE
+    CATEGORY COMPONENT
     FOLDER components
     HEADERS ${header_files}
     SOURCES ${source_files}
-    PROPERTY_DEPENDS COMPONENT)
+    PROPERTY_DEPENDS GLOBAL)
 
 list(REMOVE_ITEM source_files ${CMAKE_CURRENT_SOURCE_DIR}/extern.cpp)
 timemory_install_header_files(${source_files})
