--- a/timemory/CMakeLists.txt
+++ b/timemory/CMakeLists.txt
@@ -163,8 +163,10 @@ endforeach()
 if(SKBUILD)
     return()
 elseif(TIMEMORY_USE_PYTHON AND CMAKE_INSTALL_PYTHONDIR)
-    foreach(_FILE setup.py setup.cfg VERSION requirements.txt .requirements/build.txt .requirements/runtime.txt .requirements/mpi_runtime.txt)
-        configure_file(${PROJECT_SOURCE_DIR}/${_FILE} ${PROJECT_BINARY_DIR}/${_FILE} COPYONLY)
+    foreach(_FILE setup.py setup.cfg VERSION requirements.txt .requirements/build.txt
+                  .requirements/runtime.txt .requirements/mpi_runtime.txt)
+        configure_file(${PROJECT_SOURCE_DIR}/${_FILE} ${PROJECT_BINARY_DIR}/${_FILE}
+                       COPYONLY)
     endforeach()
     if(PYTHON_EXECUTABLE)
         execute_process(
@@ -178,7 +180,8 @@ elseif(TIMEMORY_USE_PYTHON AND CMAKE_INSTALL_PYTHONDIR)
             set(_DIST_DIR ${PROJECT_BINARY_DIR}/timemory.dist-info)
         endif()
         if(EXISTS ${_DIST_DIR} AND IS_DIRECTORY ${_DIST_DIR})
-            configure_file(${PROJECT_SOURCE_DIR}/LICENSE ${PROJECT_BINARY_DIR}/${_DIST_DIR}/LICENSE.txt COPYONLY)
+            configure_file(${PROJECT_SOURCE_DIR}/LICENSE ${_DIST_DIR}/LICENSE.txt
+                           COPYONLY)
             install(
                 DIRECTORY ${_DIST_DIR}
                 DESTINATION ${CMAKE_INSTALL_PYTHONDIR}
