--- a/timemory/CMakeLists.txt
+++ b/timemory/CMakeLists.txt
@@ -207,7 +207,7 @@ function(TIMEMORY_PYTHON_CONSOLE_SCRIPT SCRIPT_NAME SCRIPT_SUBMODULE SCRIPT_FUNC
             OPTIONAL)
     endif()
 
-    if(TIMEMORY_BUILD_TESTING OR TIMEMORY_BUILD_PYTHON)
+    if(NOT WIN32 AND (TIMEMORY_BUILD_TESTING OR TIMEMORY_BUILD_PYTHON))
         add_test(
             NAME ${SCRIPT_NAME}-console-script-test
             COMMAND ${PROJECT_BINARY_DIR}/bin/${SCRIPT_NAME} --help
