--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -18,7 +18,7 @@ jobs:
             CXX: clang++-7
             PYTHON_VERSION: '3.6'
             BUILD_TYPE: 'RelWithDebInfo'
-            PACKAGES: 'clang-7 build-essential libmpich-dev mpich ccache'
+            PACKAGES: 'clang-7 build-essential libmpich-dev mpich ccache graphviz'
             BUILD_ARGS: '--minimal --build-libs shared static --python --mpi --gotcha --stats --tools mallocp mpip --cxx-standard=17'
             CTEST_ARGS: '-V --output-on-failure'
             CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON -DTIMEMORY_UNITY_BUILD=OFF -DTIMEMORY_BUILD_PYTHON_UNITY=OFF'
@@ -26,14 +26,14 @@ jobs:
             CXX: clang++-8
             PYTHON_VERSION: '3.6'
             BUILD_TYPE: 'RelWithDebInfo'
-            PACKAGES: 'clang-8 build-essential ccache'
+            PACKAGES: 'clang-8 build-essential ccache graphviz'
             BUILD_ARGS: '--minimal --build-libs shared static --stats --tools kokkos-config timem --cxx-standard=14'
             CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON'
           - CC: clang-9
             CXX: clang++-9
             PYTHON_VERSION: '3.7'
             BUILD_TYPE: 'MinSizeRel'
-            PACKAGES: 'clang-9 build-essential libopenmpi-dev openmpi-bin openmpi-common libfabric-dev ccache'
+            PACKAGES: 'clang-9 build-essential libopenmpi-dev openmpi-bin openmpi-common libfabric-dev ccache graphviz'
             BUILD_ARGS: '--quick --build-libs shared --mpi --gotcha --tools mallocp mpip ompt --cxx-standard=14'
             CTEST_ARGS: '-V --output-on-failure'
             CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON'
@@ -42,7 +42,7 @@ jobs:
             FC: gfortran-6
             PYTHON_VERSION: '3.6'
             BUILD_TYPE: 'RelWithDebInfo'
-            PACKAGES: 'gcc-6 g++-6 gfortran-6 build-essential libtbb-dev ccache'
+            PACKAGES: 'gcc-6 g++-6 gfortran-6 build-essential libtbb-dev ccache graphviz'
             BUILD_ARGS: '--minimal --build-libs shared --python --arch --extra-optimizations --caliper --cxx-standard=14'
             CTEST_ARGS: '-V --output-on-failure'
             CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON -DTIMEMORY_BUILD_PYTHON_UNITY=OFF'
@@ -51,7 +51,7 @@ jobs:
             FC: gfortran-7
             PYTHON_VERSION: '3.7'
             BUILD_TYPE: 'Debug'
-            PACKAGES: 'gcc-7 g++-7 gfortran-7 build-essential libmpich-dev mpich libtbb-dev libpapi-dev papi-tools lcov ccache'
+            PACKAGES: 'gcc-7 g++-7 gfortran-7 build-essential libmpich-dev mpich libtbb-dev libpapi-dev papi-tools lcov ccache graphviz'
             BUILD_ARGS: '--minimal --build-libs shared --mpi --papi --gotcha --tools mpip --stats --cxx-standard=17 --coverage'
             CTEST_ARGS: '-V --output-on-failure'
             CONFIG_ARGS: ''
@@ -60,7 +60,7 @@ jobs:
             FC: gfortran-8
             PYTHON_VERSION: '3.7'
             BUILD_TYPE: 'Release'
-            PACKAGES: 'gcc-8 g++-8 gfortran-8 build-essential libmpich-dev mpich ccache'
+            PACKAGES: 'gcc-8 g++-8 gfortran-8 build-essential libmpich-dev mpich ccache graphviz'
             BUILD_ARGS: '--minimal --build-libs shared --mpi --gotcha --stats --tools compiler --cxx-standard=17'
             CTEST_ARGS: '-V --output-on-failure'
             CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON'
@@ -69,7 +69,7 @@ jobs:
             FC: gfortran-9
             PYTHON_VERSION: '3.7'
             BUILD_TYPE: 'MinSizeRel'
-            PACKAGES: 'gcc-9 g++-9 gfortran-9 build-essential ccache'
+            PACKAGES: 'gcc-9 g++-9 gfortran-9 build-essential ccache graphviz'
             BUILD_ARGS: '--minimal --build-libs shared --gotcha --stats --python --cxx-standard=17'
             CTEST_ARGS: '-V --output-on-failure'
             CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON -DTIMEMORY_BUILD_PYTHON_UNITY=OFF'
