--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -274,6 +274,10 @@ if(timemory_MAIN_PROJECT)
     set(CMAKE_CXX_VISIBILITY_PRESET
         "default"
         CACHE STRING "Default visibility")
+elseif(TIMEMORY_BUILD_HIDDEN_VISIBILITY)
+    set(CMAKE_VISIBILITY_INLINES_HIDDEN ON)
+    set(CMAKE_C_VISIBILITY_PRESET "hidden")
+    set(CMAKE_CXX_VISIBILITY_PRESET "hidden")
 else()
     set(CMAKE_VISIBILITY_INLINES_HIDDEN OFF)
     set(CMAKE_C_VISIBILITY_PRESET "default")
