gotcha updates + operation::set_data
- workaround for glibc v2.34+ not exporting _dl_sym
- cleaned up gotcha component
- operation::set_data
- updated gotcha backends

--- a/source/timemory/components/gotcha/CMakeLists.txt
+++ b/source/timemory/components/gotcha/CMakeLists.txt
@@ -1,9 +1,10 @@
+
+file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
+file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
+
 if(TIMEMORY_USE_GOTCHA)
     set(NAME gotcha)
     set(DEPS timemory::timemory-gotcha)
-
-    file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
-    file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
     build_intermediate_library(
         USE_INTERFACE
@@ -16,3 +17,6 @@ if(TIMEMORY_USE_GOTCHA)
         DEPENDS ${DEPS}
         PROPERTY_DEPENDS GLOBAL)
 endif()
+
+list(REMOVE_ITEM source_files ${CMAKE_CURRENT_SOURCE_DIR}/extern.cpp)
+timemory_install_header_files(${header_files} ${source_files})
